inserimento-foto-ruota-panoramica

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <header>
         <h1>Il mio Viaggio a Londra</h1>
     </header>
+    <main>
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="primo-pezzo-foto">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="secondo-pezzo-foto">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="terzo-pezzo-foto">
+    </main>
     
 </body>
 </html>
