--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="primo-pezzo-foto">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="secondo-pezzo-foto">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="terzo-pezzo-foto">
+
+        <hr>
+
+        <h2>Le mie spese</h2>
+        <table>
+            <thead>
+                <tr>
+                    <td><strong>Numero</strong></td>
+                    <td><strong>Descrizione</strong></td>
+                    <td><strong>Costo</strong></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360 &euro;</td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
+
     </main>
     
 </body>
