--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <hr>
 
-        <h2>Le mie spese</h2>
+        <h2><strong>Le mie spese</strong></h2>
         <table>
             <thead>
                 <tr>
@@ -49,6 +49,7 @@
             </tbody>
         </table>
         <hr>
+        <h2></h2>
 
     </main>
     
