--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
             </tbody>
         </table>
         <hr>
-        <h2></h2>
+        <h3><strong>Cose da fare</strong></h3>
+        <ul>
+            <li>Visitare la Tower of London &times;</li>
+            <li>Visitare greenwich &radic; </li>
+            <li>Ascoltare un artista di strada a Covere Garden &radic;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &times </li>
+        </ul>
+        <hr>
 
     </main>
     
